--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div id="star">大きくなる文字列</div>
+	<div id="star">変化する文字列</div>
 </body>
 </html>
